--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="portfolio.css" />
+    <link rel="stylesheet" href="assets/css/portfolio.css" />
     <title>Portfolio</title>
   </head>
   <body>
@@ -58,23 +58,23 @@
 
           <div class="row cardlar p-md-3">
             <div class="col-md-4">
-              <div class="img pb-3"><img src="img/cats.jfif" alt="" /></div>
+              <div class="img pb-3"><img src="assets/img/cats.jfif" alt="" /></div>
               <div class="h3"><h3>Hangman</h3></div>
             </div>
             <div class="col-md-4">
-              <div class="img pb-3"><img src="img/cats.jfif" alt="" /></div>
+              <div class="img pb-3"><img src="assets/img/cats.jfif" alt="" /></div>
               <div class="h3"><h3>RPG Game</h3></div>
             </div>
             <div class="col-md-4">
-              <div class="img pb-3"><img src="img/cats.jfif" alt="" /></div>
+              <div class="img pb-3"><img src="assets/img/cats.jfif" alt="" /></div>
               <div class="h3"><h3>Trivia Game</h3></div>
             </div>
             <div class="col-md-4">
-              <div class="img pb-3"><img src="img/cats.jfif" alt="" /></div>
+              <div class="img pb-3"><img src="assets/img/cats.jfif" alt="" /></div>
               <div class="h3"><h3>Rutgers Info Widget</h3></div>
             </div>
             <div class="col-md-4">
-              <div class="img pb-3"><img src="img/cats.jfif" alt="" /></div>
+              <div class="img pb-3"><img src="assets/img/cats.jfif" alt="" /></div>
               <div class="h3"><h3>Rock Paper Scissors</h3></div>
             </div>
           </div>
